Add basic working version of generator

--- a/license.css
+++ b/license.css
@@ -11,14 +11,14 @@ Initial CSS from https://codepen.io/alexlitel/pen/zGeqQW
     border-radius: 30px;
 }
 
+.flipped {
+    transform: scale(-1, 1);
+}
+
 .number {
     font-size: 152px;
     text-align: center;
     text-shadow: black 3px 2px 3px;
     margin-top: 80px;
     -webkit-filter: invert(12%);
-}
-
-#refresh_plate {
-    margin-top: 100px;
 }
